# apriltagLoc

./: CMakeLists.txt  README.md  rsConfig.json
camera_calibration/: CMakeLists.txt
camera_calibration/src/: main.cpp
locator/: CMakeLists.txt
locator/include/: Detector.h  Display.h  Locator.h  Plane.h  Point.h  Pose.h
locator/src/: Detector.cpp  Display.cpp  Locator.cpp  Plane.cpp  Pose.cpp  main.cpp
take_pics/: CMakeLists.txt
take_pics/src/: main.cpp
